--- a/products.html
+++ b/products.html
@@ -280,9 +280,9 @@
     </nav>
 
     <!-- Main fold -->
-    <section class="bg-light" id="sectionTwo" data-jarallax data-speed=".8">
+    <section class="bg-light border-bottom" id="sectionTwo" data-jarallax data-speed=".8">
       <div class="container-fluid px-md-14 d-flex flex-column">
-        <div class="row align-items-center min-vh-100 py-8 py-md-11">
+        <div class="row align-items-center min-vh-100 pt-9 pb-10">
 
             <!-- Heading -->
             <h1 class="display-4 mb-0 text-center px-md-10 px-6 mb-6">
