--- a/use-cases.html
+++ b/use-cases.html
@@ -64,7 +64,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand" href="index.html">
-          <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" class="navbar-brand-img" alt="proxycurl logo">
+          <img src="./assets/img/Proxycurl-Logotype-Primary-No Nubela.svg" class="navbar-brand-img" alt="proxycurl logo">
         </a>
 
         <!-- Toggler -->
@@ -159,7 +159,7 @@
                         <a class="dropdown-item" href="#!">
                           Jobs API
                         </a>
-                        <a class="dropdown-item mb-5 font-weight-bold" href="#!">
+                        <a class="dropdown-item mb-5" href="#!">
                           API Documentation <i class="fe fe-arrow-right"></i>
                         </a>
 
@@ -173,58 +173,107 @@
 
             <!-- Solution -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarAccount" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" id="navbarSolutions" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
                 Solutions <i class="fe fe-chevron-down"></i>
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarAccount">
+              <div class="dropdown-menu dropdown-menu-lg" aria-labelledby="navbarSolutions">
+                <div class="row no-gutters">
+                  <div class="col-12">
+                    <div class="row no-gutters">
 
-              <!-- Heading -->
-              <h6 class="dropdown-header">
-                <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"></path><path d="M12.374 19.939l5.849-8.773A.75.75 0 0017.599 10H13V4.477a.75.75 0 00-1.374-.416l-5.849 8.773A.75.75 0 006.401 14H11v5.523a.75.75 0 001.374.416z" fill="#335EEA"></path></g></svg>
-                Solutions
-              </h6>
+                      <div class="col-12 col-lg-6">
 
-                <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="#!">
-                    LinkedIn Scraper API
-                  </a>
-                </li>
-                <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="#!">
-                    Crunchbase Scraper API
-                  </a>
-                </li>
-                <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="#!">
-                    Investment signals
-                  </a>
-                </li>
-                <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="#!">
-                    Accelerating Growth Startups
-                  </a>
-                </li>
-                <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="#!">
-                    Sales and Marketing Automation
-                  </a>
-                </li>
-                <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="#!">
-                    Data for HR Tech
-                  </a>
-                </li>
-                <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="#!">
-                    Clearbit Alternative
-                  </a>
-                </li>
-                <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="#!">
-                    PeopleDataLabs Alternative
-                  </a>
-                </li>
-              </ul>
+                        <!-- Heading -->
+                        <h6 class="dropdown-header">
+                          <img class="icon mb-1" width="24" alt="Proxycurl logo" src="assets/icons/network-spread.svg"> Use Cases
+                        </h6>
+
+                        <!-- List -->
+                        <div class="dropdown-item dropright">
+                          <a class="dropdown-link" href="person-profile-api.html">
+                            LinkedIn Scraper API
+                          </a>
+                        </div>
+                        <div class="dropdown-item dropright">
+                          <a class="dropdown-link" href="#!">
+                            Crunchbase Scraper API
+                          </a>
+                        </div>
+                        <div class="dropdown-item dropright">
+                          <a class="dropdown-link" href="data-teams-in-investment-firms.html">
+                            Investment Signals
+                          </a>
+                        </div>
+                        <div class="dropdown-item dropright">
+                          <a class="dropdown-link" href="#!">
+                            Accelerating Growth Startups
+                          </a>
+                        </div>
+                        <div class="dropdown-item dropright">
+                          <a class="dropdown-link" href="hr-tech.html">
+                            Data for HR Tech
+                          </a>
+                        </div>
+                        <div class="dropdown-item dropright">
+                          <a class="dropdown-link" href="#!">
+                            Automated Recruitment
+                          </a>
+                        </div>
+                        <div class="dropdown-item dropright">
+                          <a class="dropdown-link" href="sales-and-marketing-automation.html">
+                            Sales and Marketing Automation
+                          </a>
+                        </div>
+                        <div class="dropdown-item dropright">
+                          <a class="dropdown-link" href="#!">
+                            Identifying Buyer Intent Data
+                          </a>
+                        </div>
+                        <div class="dropdown-item dropright">
+                          <a class="dropdown-link" href="#!">
+                            CRM Data Enrichment
+                          </a>
+                        </div>
+                        <div class="dropdown-item dropright">
+                          <a class="dropdown-link" href="clearbit-alternative.html">
+                            Clearbit Alternative
+                          </a>
+                        </div>
+                        <div class="dropdown-item dropright">
+                          <a class="dropdown-link" href="">
+                            People Data Labs Alternative
+                          </a>
+                        </div>
+                        <div class="dropdown-item dropright mt-4">
+                          <a class="text-primary font-weight-bold h4" href="use-cases.html">
+                            See all use-cases <i class="fe fe-arrow-right"></i>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div class="col-12 col-lg-6">
+
+                        <!-- Heading -->
+                        <h6 class="dropdown-header">
+                          <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"></path><path d="M12.374 19.939l5.849-8.773A.75.75 0 0017.599 10H13V4.477a.75.75 0 00-1.374-.416l-5.849 8.773A.75.75 0 006.401 14H11v5.523a.75.75 0 001.374.416z" fill="#335EEA"></path></g></svg> Demos
+                        </h6>
+
+                        <!-- List -->
+                        <a class="dropdown-item" href="#!">
+                          Track Job Changes
+                        </a>
+
+                        <!-- List -->
+                        <a class="dropdown-item mb-5" href="#!">
+                          Reverse Email Lookup
+                        </a>
+
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+              </div> <!-- / .row -->
             </li>
 
             <!-- Pricing -->
@@ -279,12 +328,9 @@
       </div>
     </nav>
 
-    <!-- WELCOME
-    ================================================== -->
-
      <!-- Welcome
     ================================================== -->
-    <section class="pt-8 pt-md-12">
+    <section class="pt-10">
 
       <!-- Content -->
       <div class="container">
@@ -295,7 +341,7 @@
               <span class="text-primary">Proxycurl powers all these use-cases</span> and more, pick yours!
             </h1>
   
-            <p class="lead text-gray-700 text-center px-0 px-md-10 mb-6 mb-md-12">
+            <p class="lead text-gray-700 text-center px-0 px-md-10 mb-11">
               Our customers range from sectors like HR and recruitment, sales and prospecting teams, marketing and growth, VCs and investing, and more.
             </p>
   
@@ -312,7 +358,7 @@
         <div class="row justify-content-center mx-md-10">
 
           <!-- VCs & Investing -->
-          <div class="col-12 mb-10 mb-md-12">
+          <div class="col-12 mb-10">
 
             <div class="card card-body bg-gradient-light border-zinc-200 rounded-16 px-md-9 py-md-9">
 
@@ -325,7 +371,7 @@
                 </h2>
   
                 <p class="lead text-gray-700 mb-0">
-                  Learn how VCs provide funding to startups in exchange for equity to scale innovative ideas
+                  Be first to identify the ideal startups and companies to invest in for maximized returns
                 </p>
 
               </div>
@@ -446,7 +492,7 @@
           </div>
 
           <!-- HR & Recrutment -->
-          <div class="col-12 mb-10 mb-md-12">
+          <div class="col-12 mb-10">
 
             <div class="card card-body bg-gradient-light border-zinc-200 rounded-16 px-md-9 py-md-9">
 
@@ -459,7 +505,7 @@
                 </h2>
   
                 <p class="lead text-gray-700 mb-0">
-                  Learn how human resources teams attract, evaluate, and hire qualified candidates for open roles in a company
+                  Employ HR tech to scale & automate your recruitment pipeline, or seed customized jobs for your job board
                 </p>
                 
               </div>
@@ -581,7 +627,7 @@
           </div>
 
           <!-- Sales & Prospecting -->
-          <div class="col-12 mb-10 mb-md-12">
+          <div class="col-12">
 
             <div class="card card-body bg-gradient-light border-zinc-200 rounded-16 px-md-9 py-md-9">
 
@@ -594,7 +640,7 @@
                 </h2>
   
                 <p class="lead text-gray-700 mb-0">
-                  Learn how sales teams source, qualify, and convert promising leads into new business opportunities
+                  Scale your lead generation efforts & automate your outreach activites to increase sales closing rate
                 </p>
                 
               </div>
