--- a/use-cases.html
+++ b/use-cases.html
@@ -245,7 +245,7 @@
                           </a>
                         </div>
                         <div class="dropdown-item dropright mt-4">
-                          <a class="text-primary font-weight-bold h4" href="use-cases.html">
+                          <a class="text-primary font-weight-bold" href="use-cases.html">
                             See all use-cases <i class="fe fe-arrow-right"></i>
                           </a>
                         </div>
