--- a/use-cases.html
+++ b/use-cases.html
@@ -85,7 +85,7 @@
 
             <!-- Products -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarPages" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" id="navbarPages" data-toggle="dropdown" href="products.html" aria-haspopup="true" aria-expanded="false">
                 Products <i class="fe fe-chevron-down"></i>
               </a>
               <div class="dropdown-menu dropdown-menu-lg" aria-labelledby="navbarPages">
@@ -159,8 +159,11 @@
                         <a class="dropdown-item" href="#!">
                           Jobs API
                         </a>
-                        <a class="dropdown-item mb-5" href="#!">
+                        <a class="dropdown-item" href="#!">
                           API Documentation <i class="fe fe-arrow-right"></i>
+                        </a>
+                        <a class="dropdown-item text-primary font-weight-bold mb-5" href="products.html">
+                          See all products <i class="fe fe-arrow-right"></i>
                         </a>
 
                       </div>
