--- a/pricing.html
+++ b/pricing.html
@@ -65,7 +65,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand" href="index.html">
-          <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" class="navbar-brand-img" alt="proxycurl logo">
+          <img src="./assets/img/Proxycurl-Logotype-Primary-No Nubela.svg" class="navbar-brand-img" alt="proxycurl logo">
         </a>
 
         <!-- Toggler -->
@@ -86,9 +86,12 @@
 
             <!-- Products -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarPages" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+              <a href="products.html" class="nav-link" id="navbarPages">
                 Products <i class="fe fe-chevron-down"></i>
               </a>
+              <button class="dropdown-toggle dropdown-toggle-split" style="display: none;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
               <div class="dropdown-menu dropdown-menu-lg" aria-labelledby="navbarPages">
                 <div class="row no-gutters">
                   <div class="col-12">
@@ -160,8 +163,11 @@
                         <a class="dropdown-item" href="#!">
                           Jobs API
                         </a>
-                        <a class="dropdown-item mb-5 font-weight-bold" href="#!">
+                        <a class="dropdown-item" href="#!">
                           API Documentation <i class="fe fe-arrow-right"></i>
+                        </a>
+                        <a class="dropdown-item text-primary font-weight-bold mb-5 mb-md-0" href="products.html">
+                          See all products <i class="fe fe-arrow-right"></i>
                         </a>
 
                       </div>
@@ -245,6 +251,11 @@
                             People Data Labs Alternative
                           </a>
                         </div>
+                        <div class="dropdown-item dropright mt-4">
+                          <a class="text-primary font-weight-bold" href="use-cases.html">
+                            See all use-cases <i class="fe fe-arrow-right"></i>
+                          </a>
+                        </div>
                       </div>
 
                       <div class="col-12 col-lg-6">
@@ -255,8 +266,13 @@
                         </h6>
 
                         <!-- List -->
-                        <a class="dropdown-item mb-5" href="#!">
+                        <a class="dropdown-item" href="#!">
                           Track Job Changes
+                        </a>
+
+                        <!-- List -->
+                        <a class="dropdown-item mb-5" href="#!">
+                          Reverse Email Lookup
                         </a>
 
                       </div>
