--- a/use-cases.html
+++ b/use-cases.html
@@ -85,9 +85,12 @@
 
             <!-- Products -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarPages" data-toggle="dropdown" href="products.html" aria-haspopup="true" aria-expanded="false">
+              <a href="products.html" class="nav-link" id="navbarPages">
                 Products <i class="fe fe-chevron-down"></i>
               </a>
+              <button class="dropdown-toggle dropdown-toggle-split" style="display: none;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
               <div class="dropdown-menu dropdown-menu-lg" aria-labelledby="navbarPages">
                 <div class="row no-gutters">
                   <div class="col-12">
@@ -162,7 +165,7 @@
                         <a class="dropdown-item" href="#!">
                           API Documentation <i class="fe fe-arrow-right"></i>
                         </a>
-                        <a class="dropdown-item text-primary font-weight-bold mb-5" href="products.html">
+                        <a class="dropdown-item text-primary font-weight-bold mb-5 mb-md-0" href="products.html">
                           See all products <i class="fe fe-arrow-right"></i>
                         </a>
 
