add badge pricing

--- a/pricing.html
+++ b/pricing.html
@@ -441,6 +441,9 @@
 
                     <span class="text-opacity-80">
                       Annual
+                      <span class="badge badge-pill badge-warning ml-1">
+                        <span class="h6 font-weight-bold text-uppercase">+2 MONTHS FREE CREDITS</span>
+                      </span>
                     </span>
       
                   </div>
@@ -560,7 +563,7 @@
               </p>
 
               <p class="mb-6 small text-muted">
-                Credits expire every year
+                Credits expire every billing period
               </p>
 
               <a href="#!" class="btn btn-sm btn-block btn-primary mb-5 mb-lg-0">
