--- a/reverse-email-lookup-demo.html
+++ b/reverse-email-lookup-demo.html
@@ -593,15 +593,15 @@
             <div class="mt-2 mb-6">
 
               <p class="lead mb-2">
-                <i class="h3 neu-br-linkedin-sq text-primary"></i> Matched LinkedIn Profile URL? <span class="text-success font-weight-bold border-bottom border-success">Found<i class="neu-so-tick-circle"></i></span>
+                <i class="h3 neu-br-linkedin-sq text-primary"></i> LinkedIn? <span class="text-success font-weight-bold border-bottom border-success">Found<i class="neu-so-tick-circle"></i></span>
               </p>
 
               <p class="text-muted lead mb-2">
-                <i class="h3 neu-br-fb-sq text-muted"></i> Matched Facebook Profile URL? <span class="text-danger font-weight-bold border-bottom border-danger">Unknown<i class="neu-so-close-circle"></i></span>
+                <i class="h3 neu-br-fb-sq text-muted"></i> Facebook? <span class="text-danger font-weight-bold border-bottom border-danger">Unknown<i class="neu-so-close-circle"></i></span>
               </p>
 
               <p class="text-muted lead mb-2">
-                <i class="h3 neu-br-twitter-sq text-muted"></i> Matched Twitter Profile URL? <span class="text-danger font-weight-bold border-bottom border-danger">Unknown<i class="neu-so-close-circle"></i></span>
+                <i class="h3 neu-br-twitter-sq text-muted"></i> Twitter? <span class="text-danger font-weight-bold border-bottom border-danger">Unknown<i class="neu-so-close-circle"></i></span>
               </p>
 
               <p class="lead mb-0">
@@ -730,7 +730,7 @@ curl \
             <img class="img-fluid rounded mb-6" alt="gif here" src="Illustration_landscape_placement.png">
 
             <a class="btn btn-white text-success lift" href="https://sapiengraph.com" target="_blank">
-              Go to Sapiengraph <i class="fe fe-arrow-right"></i>
+              Try it now <i class="fe fe-arrow-right"></i>
             </a>
 
           </div>
