--- a/reverse-email-lookup-demo.html
+++ b/reverse-email-lookup-demo.html
@@ -715,7 +715,7 @@ curl \
               </p>
             </div>
 
-            <img class="img-fluid rounded mb-6" alt="gif here" src="Illustration_landscape_placement.png">
+            <img class="img-fluid rounded mb-6" alt="Free Reverse Email Lookup Tool in Spreadsheets" src="assets/gif:video/reverselookupbillgatesemail-ezgif.com-optimize.gif">
 
             <a class="btn btn-white text-success lift" href="https://sapiengraph.com" target="_blank">
               Try it now <i class="fe fe-arrow-right"></i>
