remove border-bottom

--- a/reverse-email-lookup-demo.html
+++ b/reverse-email-lookup-demo.html
@@ -992,7 +992,7 @@ curl \
     </section>
 
     <!-- BANNER STORY & USE-CASE 2-->
-    <section class="border-bottom jarallax" data-jarallax data-speed=".6" style="background-image: url(assets/img/photos/paula-bg.jpg);">
+    <section class="jarallax" data-jarallax data-speed=".6" style="background-image: url(assets/img/photos/paula-bg.jpg);">
       <div class="container pt-8 pt-md-11 pb-8 pb-md-11">
 
         <div class="card lift shadow-dark-lg" data-aos="fade-up">
